--- a/app/src/main/res/menu/repo_detail_fragment.xml
+++ b/app/src/main/res/menu/repo_detail_fragment.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:title="@string/show_parent"
-        android:id="@+id/action_show_parent"
-        android:showAsAction="never" />
+    <!--
+        <item
+            android:title="@string/show_parent"
+            android:id="@+id/action_show_parent"
+            android:showAsAction="never" />-->
     <item
         android:title="@string/menu_star"
         android:id="@+id/action_star"
