--- a/app/src/main/res/layout/repo_detail_fragment.xml
+++ b/app/src/main/res/layout/repo_detail_fragment.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical"
     android:background="@color/accent">
 
-    <FrameLayout android:id="@+id/repoDetailInfo"
+    <FrameLayout
+        android:id="@+id/repoDetailInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -33,7 +34,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="64dp"
                 android:id="@+id/smallPager"
-                android:layout_margin="16dp"/>
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginRight="0dp"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
