--- a/app/src/main/res/layout/spinner_branch.xml
+++ b/app/src/main/res/layout/spinner_branch.xml
@@ -3,22 +3,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/accentDark">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:gravity="center"
         android:id="@+id/text"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:layout_gravity="center"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="16dp"/>
-
-    <View
-        android:layout_width="4dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="top|bottom|right"
-        android:background="@color/complementary"/>
 
 </FrameLayout>
