--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/avatar_size"
-        android:background="@color/gray_github"
+        android:background="@color/gray_github_light"
         android:padding="8dp">
 
         <LinearLayout
@@ -69,7 +69,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:background="@color/gray_github">
+        android:background="@color/gray_github_light">
 
         <NumericTitle
             android:layout_width="match_parent"
