--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="gray_github_light">#f3f3f3</color>
     <color name="gray_github_dark">#737373</color>
     <color name="gray_github_medium">#ffaaaaaa</color>
+    <color name="gray_divider">#9fd2d2d2</color>
     <color name="white">#FFFFFF</color>
     
     <integer-array name="colorsSmooth">
