--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             style="?android:buttonBarButtonStyle"
             android:layout_width="@dimen/icon56dp"
             android:layout_height="@dimen/icon56dp"
-            android:padding="10dp"
+            android:padding="@dimen/gapMedium"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
@@ -60,7 +60,7 @@
                 android:layout_width="@dimen/icon56dp"
                 android:layout_height="@dimen/icon56dp"
                 android:id="@+id/chevron"
-                android:padding="20dp"
+                android:padding="@dimen/gapLarge"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
