--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,19 @@
     <dimen name="shape_half_inv">-23dp</dimen>
     <dimen name="button_press">2dp</dimen>
     <dimen name="button_press_elevation">4dp</dimen>
-    <dimen name="icon56dp">56dp</dimen>
+    <dimen name="icon56dp">48dp</dimen>
+
+    <!-- http://developer.android.com/design/style/metrics-grids.html -->
+    <dimen name="gapSmall">4dp</dimen>
+    <dimen name="gapMedium">8dp</dimen>
+    <dimen name="gapLarge">16dp</dimen>
+    <dimen name="gapXLarge">32dp</dimen>
+    <dimen name="gapXXLarge">64dp</dimen>
+    <dimen name="gapXXXLarge">128dp</dimen>
+
+    <!-- http://developer.android.com/design/style/typography.html -->
+    <dimen name="textSizeMicro">12sp</dimen>
+    <dimen name="textSizeSmall">14sp</dimen>
+    <dimen name="textSizeMedium">18sp</dimen>
+    <dimen name="textSizeLarge">22sp</dimen>
 </resources>
