--- a/app/src/release/res/values/colors.xml
+++ b/app/src/release/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="accent">#ff0082ff</color>
-    <color name="accentDark">#ff0069d0</color>
-    <color name="complementary">#ffff7d00</color>
+    <color name="accent">#4183C4</color>
+    <color name="accentDark">#4141C5</color>
+    <color name="complementary">#A18E41</color>
 </resources>
