--- a/app/src/main/res/drawable/shape_highlight.xml
+++ b/app/src/main/res/drawable/shape_highlight.xml
@@ -2,5 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#bbb" />
+    <solid android:color="@color/gray_github_light_selected" />
 </shape>
