--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -11,40 +11,35 @@
         android:id="@+id/swipe">
 
         <ListView
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@android:id/list" />
+            android:drawSelectorOnTop="false" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <android.support.v4.widget.ContentLoadingProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/emptyLayout"
-        android:layout_gravity="center"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/ic_launcher"
-            android:id="@+id/emptyIcon"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/emptyText"
-            android:layout_below="@id/emptyIcon"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
-            android:text="HODOR"
-            android:textSize="24sp"
-            android:textColor="@color/gray_github_medium" />
+            android:id="@+id/emptyLayout"
+            android:layout_gravity="center"
+            android:visibility="gone">
 
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/ic_launcher"
+                android:id="@+id/emptyIcon"
+                android:layout_centerHorizontal="true" />
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/emptyText"
+                android:layout_below="@id/emptyIcon"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp"
+                android:text="HODOR"
+                android:textSize="24sp"
+                android:textColor="@color/gray_github_medium" />
+        </RelativeLayout>
 </FrameLayout>
