--- a/app/src/main/res/layout/row_menu_category.xml
+++ b/app/src/main/res/layout/row_menu_category.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@drawable/list_selector">
+    android:orientation="horizontal">
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
