--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,5 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
+
+    <item
+        android:title="@string/action_settings"
+        android:id="@+id/action_settings"
+        android:showAsAction="never"
+        android:orderInCategory="10"/>
 
 </menu>
