--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <item
+    <!--<item
         android:title="@string/action_settings"
         android:id="@+id/action_settings"
         android:showAsAction="never"
-        android:orderInCategory="10"/>
+        android:orderInCategory="10"/>-->
 
 </menu>
