--- a/css/main.css
+++ b/css/main.css
@@ -9,35 +9,21 @@
     font-family: "Open sans", "Calibri";
 }
 
-.dark-bar {
-    height: 50px;
-    width: 100%;
-    background-color: #0B417F;
-}
 .dark-bar div {
+    padding-top: 15px;
     width: 100%;
     text-align: center;
-    padding-top: 15px;
 }
 .dark-bar span.glyphicon {
-    color: #97c5ff;
     margin-right: 10px;
-
+    color: #97c5ff;
 }
 .dark-bar span:not(.glyphicon) {
     margin-right: 15px;
-
-}
-.feature-image {
-    height: 150px;
-    background-image: url(/img/htc-repos.png);
-    background-position: center 5px;
-    background-size: 200px;
-    background-repeat: no-repeat;
 }
 .carousel div img{
-    height: 375px;
     margin: 0 auto;
+    height: 375px;
 }
 .google-play {
     margin: 20px auto 20px 25%;
@@ -56,7 +42,6 @@
     background-color: #fff !important;
 }
 .navbar a {
-
     color: #ffffff !important;
 }
 
@@ -64,6 +49,92 @@
     background-color: #224C7F !important;
     color: #fff;
 }
+.feature-image {
+    height: 400px;
+    background-image: url(/img/htc-repos.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+dark-bar {
+  width: 100%;
+  height: 50px;
+  background-color: #0B417F;
+}
+
+@media (min-width: 200px) and (max-width: 400px) {
+    #download {
+        width: 100%;
+    }
+
+    .dark-bar {
+        width: 111%;
+        height: 50px;
+        background-color: #0B417F;
+        color: #fff;
+    }
+
+    .feature-image {
+        height: 150px;
+        background-image: url(/img/htc-repos.png);
+        background-position: center 5px;
+        background-size: 200px;
+        background-repeat: no-repeat;
+    }
+    .navbar-default .navbar-nav  a  {
+        background-image: none !important;
+        border-left: 3px solid rgba(0,0,0,0);
+        box-shadow: none;
+    }
+
+    .navbar-default .navbar-nav > .active > a  {
+        background-image: none !important;
+        border-left: 3px solid #fff;
+        box-shadow: none;
+    }
 
 
+}
+@media (min-width: 401px) and (max-width: 1600px) {
+    .navbar-default .navbar-nav  a  {
+        background-image: none !important;
+        border-top: 3px solid rgba(0,0,0,0);
+        box-shadow: none;
+    }
 
+    .navbar-default .navbar-nav > .active > a  {
+        background-image: none !important;
+        border-top: 3px solid #fff;
+        box-shadow: none;
+    }
+
+    .container {
+       margin: 0 0 0 0!important;
+       width: 100%;
+    }
+    .first.row h2 {
+        margin-bottom: 40px;
+        margin-top: 40px;
+    }
+    .first.row p {
+        font-size: 16px;
+        margin-bottom: 40px;
+    }
+    .dark-bar {
+        width: 105%;
+        height: 50px;
+        background-color: #0B417F;
+        color: #fff;
+    }
+    div.carousel {
+        text-align: center;
+        margin-top: 50px
+    }
+    div.carousel div {
+        display: inline;
+        text-align: center;
+    }
+    .google-play {
+        margin-top: 60px;
+        margin-left: 40%;
+    }
+}
