Fab button on list

--- a/app/src/main/res/layout/row_content.xml
+++ b/app/src/main/res/layout/row_content.xml
@@ -3,15 +3,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="wrap_content"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="?android:attr/listPreferredItemHeightLarge"
     android:background="@drawable/list_selector"
     android:gravity="center_vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
     <ImageView
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/icon"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
@@ -23,17 +23,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/name"
-        android:layout_marginTop="4dp"
         android:layout_toRightOf="@+id/icon"
-        android:layout_toEndOf="@+id/icon" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:id="@+id/sha"
-        android:layout_toRightOf="@+id/icon"
-        android:layout_alignParentRight="true"
-        android:textColor="@color/gray_github_medium"
-        android:layout_below="@+id/name"/>
+        android:layout_toEndOf="@+id/icon"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center_vertical" />
 </RelativeLayout>
