--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
+    android:layout_height="?android:attr/listPreferredItemHeightLarge"
     android:background="@drawable/list_selector"
     android:gravity="center_vertical">
 
