--- a/app/src/main/res/menu/new_issue.xml
+++ b/app/src/main/res/menu/new_issue.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.alorma.github.ui.activity.NewIssueActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/action_send"
+        android:title="@string/action_send_issue"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="always" />
 </menu>
