--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         app:spb_stroke_separator_length="4dp"
         app:spb_reversed="true"
         app:spb_mirror_mode="true"
-        android:id="@+id/smoothBar"
+        android:id="@id/smoothBar"
         android:background="@color/gray_github_light"/>
 
     <WebView
