--- a/app/src/main/res/layout/activity_new_issue.xml
+++ b/app/src/main/res/layout/activity_new_issue.xml
@@ -15,7 +15,7 @@
         app:spb_stroke_separator_length="4dp"
         app:spb_reversed="false"
         app:spb_mirror_mode="false"
-        android:id="@+id/smoothBar"
+        android:id="@id/smoothBar"
         android:layout_gravity="top" />
 
     <LinearLayout
