--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -26,6 +26,7 @@
         android:layout_width="@dimen/fab"
         android:layout_height="@dimen/fab"
         android:layout_margin="@dimen/gapLarge"
+        android:scaleType="centerInside"
         android:layout_gravity="bottom|right|end" />
 
     <RelativeLayout
