--- a/app/src/main/res/menu/repo_detail_activity.xml
+++ b/app/src/main/res/menu/repo_detail_activity.xml
@@ -4,6 +4,20 @@
 
     <item android:id="@+id/share_repo"
         android:title="@string/action_share_repo"
-        android:showAsAction="always"/>
+        android:showAsAction="ifRoom"/>
+    <item
+        android:title="@string/show_parent"
+        android:id="@+id/action_show_parent"
+        android:showAsAction="never" />
+    <item
+        android:title="@string/menu_star"
+        android:id="@+id/action_star"
+        android:showAsAction="never"
+        android:orderInCategory="10"/>
+    <item
+        android:title="@string/menu_watch"
+        android:id="@+id/action_watch"
+        android:showAsAction="never"
+        android:orderInCategory="11" />
 
 </menu>
