--- a/app/src/main/res/layout/activity_issue_detail.xml
+++ b/app/src/main/res/layout/activity_issue_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.alorma.github.ui.activity.IssueDetailActivity"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/repoDetailInfo"
