--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/listContentFL">
+    android:id="@+id/listContentFL"
+    android:background="@color/gray_github_light">
 
     <FrameLayout
         android:id="@+id/listContainer"
